# cityjson-validator-rs

./: .gitignore  Cargo.toml  readme.md
src/: lib.rs  main.rs  validator.rs
test/: test.cmd
