[package]
name = "cityjson-validator"
version = "0.1.0"
authors = ["= <=>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# TODO : make sure that `cargo run` exclude all wasm-bindgen business

[dependencies]
wasm-bindgen = "0.2.74"
serde_json = "1.0.64"
jsonschema = { version = "0.9.0", default-features = false }


# this is giving issues 
parking_lot_core = "=0.8.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
