[package]
name = "cjval"
version = "0.2.0"
authors = ["= <=>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# TODO : make sure that `cargo run` exclude all wasm-bindgen business

[dependencies]
serde_json = "1.0.64"
jsonschema = { version = "0.9.0", default-features = false }
wasm-bindgen = "0.2.74"
structopt = "0.3.13"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

# the latest version of parking_lot_core is not wasm ready: 
# https://github.com/kellpossible/cargo-i18n/issues/70
parking_lot_core = "=0.8.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
